# lessons-tracker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  backend.dockerfile  docker-compose.yaml  manage.py  mypy.ini  pyproject.toml  settings.py
.github/workflows/: test.yaml
fixtures/: admin_tools_stats.json
lessons_tracker/: asgi.py  settings.py  urls.py  wsgi.py
lessons_tracker/lessons/: admin.py  apps.py  models.py  urls.py
lessons_tracker/lessons/migrations/: 0001_initial.py  0002_remove_lesson_subject_lessontosubjectrelation_and_more.py
lessons_tracker/lessons/serializers/: class_level.py  class_subject.py  lesson.py  student.py  summary.py
lessons_tracker/lessons/templates/registration/: login.html
lessons_tracker/lessons/tests/: factories.py  test_class_level.py  test_class_subject.py  test_lesson.py  test_migrations_are_generated.py  test_student.py  test_students.py  test_summary.py
lessons_tracker/lessons/views/: class_level.py  class_subject.py  lesson.py  student.py  students.py  summary.py
lessons_tracker/middlewares/: login_middleware.py
nginx/: .gitignore  mime.types  nginx.conf
